style.css
body{
    background-color: #0d1117;
    color: white;
    background-image:
        linear-gradient(
            rgba(255, 255, 255, .03) 1px,
            transparent 1px
        ),
        linear-gradient(
            90deg,
            rgba(255, 255, 255, .03) 1px,
            transparent 1px
        );
    background-size: 24px 24px;
}

.card{
    background: #1a1a2e;
    border: 4px solid #4ade80;
    border-radius: 0px;
    box-shadow: 0 0 10px #22c55e, inset 0 0 10px rgba(34, 197, 94, .3);
    transition: .25s;
    padding: 12px;
    border-radius: 0;
    height: fit-content;
}

.card:hover{
    transform: scale(1.05);
    box-shadow:
        0 0 25px #22c55e,
        inset 0 0 15px rgba(34, 197, 94, .4);
}

.xpBar{
    height: 30px;
    background: #111825;
    border: 3px solid white;
    margin-bottom: 10px;
}

.xpAmount{
    height: 100%;
    width: 0%;
    background:
        repeating-linear-gradient(
            45deg,
            #22c55e,
            #22c55e 10px,
            #4ade80 10px,
            #4ade80 20px
        );
    box-shadow: 0 0 10px #22c55e;
    transition: width .5s ease-in-out;
}

button{
    width: 100%;
    padding: 15px;
    background: #22c55e;
    border: 3px solid white;
    color: white;
    font-family: "Press Start 2P", cursive;
    cursor: pointer;
    transition: .2s;
}

button:hover{
    transform: scale(1.05);
    box-shadow: 0 0 20px #22c55e;
}

h1, h2, h3 {
    font-family: "Press Start 2P", cursive;
}

p{
    font-family: "Press Start 2P", cursive;
}

.background {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-image: radial-gradient(#00ff88 1px, transparent 1px);
    background-size: 30px 30px;
    opacity: .1;
    z-index: -1;
    animation: scrollBg 15s linear infinite;
}

@keyframes scrollBg {
    from {transform: translateY(0);}
    to {transform: translateY(30px);}
}

#workoutWindow{
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, .7);
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 999;
}

.hiddenWindow{
    display: none;
}

.workoutBox{
    background: #1a1a2e;
    padding: 20px;
    border: 3px solid #4ade80;
    width: 400px;
}

#dashboard{
    width: 95%;
    max-width: 1600px;
    margin: auto;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 20px;
    padding: 20px;
}

#profileBar{
    display: flex;
    justify-content: space-between;
    align-items: center;
    background: #1a1a2e;
    border: 4px solid #4ade80;
    padding: 20px;
    box-shadow: 0 0 10px #22c55e;
    grid-column: span 4;
}

#profileLeft{
    display: flex;
    align-items: center;
    gap: 15px;
}

#avatar{
    height: 20px;
    background: #111825;
    border: 3px solid #4ade80;
}

#xpContainer{
    width: 100%;
    height: 20px;
    background: #111825;
    border: 3px solid #4ade80;
}

#xpAmount{
    height: 100%;
    width: 0%;
    background: #22c55e;
    box-shadow: 0 0 10px #22c55e;
}

#recentWorkoutsCard h3{
    margin-bottom: 10px;
    color: #4ade80;
}

.recentWorkoutItem{
    padding: 10px;
    margin-bottom: 15px;
    border-bottom: 2px solid #4ade80;
}

.recentWorkoutItem:last-child{
    border-bottom: none;
}

#statsCard #logWeight{
    width: auto;
    padding: 10px 15px;
    margin-top: 10px;
    font-size: 12px;
}

#statsCard, #achievementsCard{
    grid-column: span 1;
}

#questsCard{
    grid-column: span 1;
    grid-row: span 2;
    background: #111827;
}

#streakCard, #logWorkoutCard{
    grid-column: span 1;
    padding: 8px;
    min-height: 80px;
}

.card p{
    margin: 4px 0;
    line-height: 1.2;
}

#statsCard {background: #1a1a2e;}
#streakCard {background: #0f172a;}
#achievementsCard {background: #1e293b;}
#recentWorkoutsCard {background: #1a1a2e;}
#logWorkoutCard {background: #0f172a;}

